[mod-commands] IJPL-214795 (preparations for) ModPsiNavigator API improvements
1. Move to core-api
2. EditorUtil.asPsiNavigator -> Editor.asPsiNavigator (to be accessible from analysis-api)
3. Make document accessible from ModPsiNavigator
4. Remove PSI operations from ModPsiNavigator, as Editor doesn't provide them (they are still available in ModPsiUpdater)

GitOrigin-RevId: ec751261fbbf24ed59884c53bc155d447d51ed7f